tests/cases/fail/module_qualified_unknown.p4
import math

def main() -> None:
    print(math.nope(1))
